# mts-fabrics-study

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
config/: flow-1080.json  flow-2160.json  flow-720.json  flow2.json  flow3.json
data/: MXLFabrics+Host2Host+SHM+OneWay+Spin.csv  MXLFabrics+Host2Host+SHM+OneWay+Wait.csv  MXLSHM+OneWay+Spin.csv  MXLSHM+OneWay+Wait.csv  direct-2160@60.csv  direct-720@25.csv  pingpong-2160@60.csv
data/d2h-intrahost/1080/: MXLFabrics+Cuda2Host+SHM+OneWay+Spin.csv  MXLFabrics+Cuda2Host+SHM+OneWay+Wait.csv  MXLFabrics+Cuda2Host+SHM+OneWay+Wait.perf.csv
data/d2h-intrahost/2160/: MXLFabrics+Cuda2Host+SHM+OneWay+Spin.perf.csv
data/dh2hd-interhost/1080/: MXLFabrics+Cuda2Host2Host2Cuda+Verbs+Reflect+Wait.csv
data/dh2hd-interhost/2160/: MXLFabrics+Cuda2Cuda+Verbs+Reflect+Spin.csv  MXLFabrics+Cuda2Cuda+Verbs+Reflect+Wait.csv  MXLFabrics+Cuda2Host2Host2Cuda+Verbs+Reflect+Spin.csv  MXLFabrics+Cuda2Host2Host2Cuda+Verbs+Reflect+Wait.csv  MXLFabrics+Host2Host+Verbs+Reflect+Spin.csv
data/dh2hd-interhost/720/: MXLFabrics+Cuda2Cuda+Verbs+Reflect+Wait.csv  MXLFabrics+Host2Host+Verbs+Reflect+Spin.csv  (+1 more)
data/other/: MXLFabrics+Host2Host+SHM+OneWay+Wait.csv  pingpong-720@25.csv
gpu2gpu/1080/: MXLFabrics+Cuda2Cuda+SHM+OneWay+Spin.csv  MXLFabrics+Cuda2Cuda+SHM+OneWay+Spin.perf.csv  NativeCuda+Cuda2Cuda.csv  NativeCuda+Cuda2Cuda.perf.csv
gpu2gpu/2160/: MXLFabrics+Cuda2Cuda+SHM+OneWay+Spin.csv  MXLFabrics+Cuda2Cuda+SHM+OneWay+Spin.perf.csv  NativeCuda+Cuda2Cuda.csv  NativeCuda+Cuda2Cuda.perf.csv
gpu2gpu/720/: MXLFabrics+Cuda2Cuda+SHM+OneWay+Spin.csv  MXLFabrics+Cuda2Cuda+SHM+OneWay+Spin.perf.csv  NativeCuda+Cuda2Cuda.csv  NativeCuda+Cuda2Cuda.perf.csv  NativeCuda+Host2Cuda.csv  NativeCuda+Host2Cuda.perf.csv
notebooks/: MXLSHM-vs-MXLFabrics+SHM.ipynb  extra-copy.ipynb  mts-study.ipynb  mts_study.py  mxlfabrics-vs-cudamemcpy.ipynb  pingpong-vs-oneway.ipynb  study-event-timeline.ipynb  study.ipynb  verbs-jonas.ipynb  verbs.ipynb
notebooks/other/: Cuda2Cuda-intergpu_Native-vs-libfabric.ipynb  MXLSHM-vs-MXLFabrics+SHM.ipynb  extra-copy.ipynb  mxlfabrics-vs-cudamemcpy.ipynb  pingpong-vs-oneway.ipynb  study-event-timeline.ipynb  verbs-jonas.ipynb  verbs.ipynb
scripts/: jonas-archlinux-build.sh
scripts/pcm/: pcm.py  requirements.txt
scripts/test/: fabrics-vs-cudamemcpy.sh  mts-study-reflector.sh  mts-study.sh  verbs-extra-cuda-copy.sh  verbs-host2host-vs-cuda2cuda.sh
src/: Base64.hpp  CSV.hpp  Config.cpp  Config.hpp  Defer.hpp  Executor.cpp  Executor.hpp  FlowSetup.cpp  FlowSetup.hpp  NetworkCounters.cpp  NetworkCounters.hpp  Nvml.cpp  Nvml.hpp  Output.cpp  Output.hpp  Pcie.cpp  Pcie.hpp  Pcm.cpp  Pcm.hpp  Perf.cpp  Perf.hpp  Rate.cpp  Rate.hpp  Reflector.cpp  Reflector.hpp  Runner.cpp  Runner.hpp  ScopedGPUMaxClocks.cpp  ScopedGPUMaxClocks.hpp  StaticString.hpp  Test.cpp  Test.hpp  main.cpp
src/tests/: Common.hpp  MXLFabrics.hpp  MXLHost2Host.cpp  MXLHost2Host.hpp  MXLSHM.hpp  NativeCuda.hpp  TestTemplateOneWay.hpp  TestTemplatePingPong.hpp
tools/mxl-fabrics-demo/: demo.cpp
(+509 files in other folders)
